# mss-correction-assistant

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/components/: Agenda.tsx  CalendarEvent.tsx  CalendarGrid.tsx  EmojiSlider.tsx  Navigation.tsx  UpcomingEvents.tsx
app/reformulation/: page.tsx
hooks/: useOrders.ts
services/: firebase.service.ts  storage.service.ts  text-processing.service.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
types/: order.ts
utils/: emoji-degree.tsx  order.ts
